--- a/yantra-1.2.295/YantraJS.ExpressionCompiler/YantraJS.ExpressionCompiler.csproj
+++ b/yantra-1.2.295/YantraJS.ExpressionCompiler/YantraJS.ExpressionCompiler.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net8.0-windows</TargetFramework>
     <RootNamespace>YantraJS</RootNamespace>
     <PackageId>YantraJS.ExpressionCompiler</PackageId>
     <PackageTags>linq,expression,yantra,yantrajs,javascript,c#,standard,core,framework,.net</PackageTags>
@@ -21,8 +21,8 @@
   <ItemGroup>
     <PackageReference Include="System.Reflection.Emit" Version="4.7.0" />
     <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.7.0" />
-    <PackageReference Include="System.Reflection.Metadata" Version="9.0.8" />
-    <PackageReference Include="Nerdbank.GitVersioning" Version="3.7.115">
+    <PackageReference Include="System.Reflection.Metadata" Version="10.0.3" />
+    <PackageReference Include="Nerdbank.GitVersioning" Version="3.9.50">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
