--- a/yantra-1.2.295/YantraJS.JSClassGenerator/YantraJS.JSClassGenerator.csproj
+++ b/yantra-1.2.295/YantraJS.JSClassGenerator/YantraJS.JSClassGenerator.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net8.0-windows</TargetFramework>
 	  <AssemblyName>YantraJS.JSClassGenerator</AssemblyName>
 	  <PackageId>YantraJS.JSClassGenerator</PackageId>
 	  <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
@@ -20,8 +20,8 @@
 
 	
   <ItemGroup>
-	  <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.14.0" PrivateAssets="all" />
-	    <PackageReference Include="Nerdbank.GitVersioning" Version="3.7.115">
+	  <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="5.0.0" PrivateAssets="all" />
+	    <PackageReference Include="Nerdbank.GitVersioning" Version="3.9.50">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
