--- a/yantra-1.2.295/YantraJS.ExpressionCompiler/YantraJS.ExpressionCompiler.csproj
+++ b/yantra-1.2.295/YantraJS.ExpressionCompiler/YantraJS.ExpressionCompiler.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0-windows</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>YantraJS</RootNamespace>
     <PackageId>YantraJS.ExpressionCompiler</PackageId>
     <PackageTags>linq,expression,yantra,yantrajs,javascript,c#,standard,core,framework,.net</PackageTags>
