--- a/yantra-1.2.295/YantraJS.Core/YantraJS.Core.csproj
+++ b/yantra-1.2.295/YantraJS.Core/YantraJS.Core.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0-windows</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <AssemblyName>YantraJS.Core</AssemblyName>
     <PackageId>YantraJS.Core</PackageId>
     <PackageTags>yantra,yantrajs,javascript,c#,standard,core,framework,.net</PackageTags>
