--- a/yantra-1.2.295/YantraJS.JSClassGenerator/YantraJS.JSClassGenerator.csproj
+++ b/yantra-1.2.295/YantraJS.JSClassGenerator/YantraJS.JSClassGenerator.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0-windows</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
 	  <AssemblyName>YantraJS.JSClassGenerator</AssemblyName>
 	  <PackageId>YantraJS.JSClassGenerator</PackageId>
 	  <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
